0.10.0
* Improve messages for support
* Detect VAS connection problems
* Handle cases where SUDO resets the environment
* Add -V flag to get version
* Add flags to support non-quest-samba
* Improve the way that the service daemons start

0.9.11
* bug 240: support new idmap parameter names for Samba 3.0.25
* bug 254: vas-samba-config properly starts/stops services on HP-UX

0.9.10
* bug 217: disable scripted password changes with some VAS 3.1 versions

0.9.9
* bug 191: fix the way the host password is updated
* Fix vas-samba-config script on Solaris
* Add manual page for vasidmap(1)
* Change package name to quest-vasidmap (and QSFTidmap for Solaris)

0.9.8
* Add OR filter support for recent Samba3 changes
* Handle PAM restrictions parameters in smb.conf
* Simplify the way vas.conf is updated

0.9.7
* bug 78: user SIDs being detected as groups with VAS < 3.1

0.9.5
* Improved performance in SID translation code

0.9.4
* Fix multidomain support in vasidmap

0.9.3
* Added -s option to vasidmapd
* Improved documentation
* Removed unnecessary dependency on Samba

0.9.2
* Initial release